Project

General

Profile

Actions

Bug #45878

closed

RGW crash after 2 times of osd failure

Added by Or Friedmann almost 4 years ago. Updated almost 4 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Target version:
-
% Done:

0%

Source:
Development
Tags:
Backport:
Regression:
No
Severity:
1 - critical
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Way to reproduce:
1) s3cmd mb s3://hello
2) s3cmd put /etc/hosts
3) pkill osd
4) bin/ceph-osd -i 0 -c ./build/ceph.conf
5) s3cmd put /etc/hosts
6) pkill osd -> RGW crashed


Files

radosgw-crash.log.zip (114 KB) radosgw-crash.log.zip Or Friedmann, 06/04/2020 04:00 PM
Actions #1

Updated by Or Friedmann almost 4 years ago

It looks like it is correlated with this PR:

https://github.com/ceph/ceph/pull/32601

Actions #2

Updated by Casey Bodley almost 4 years ago

do you have a stack trace?

Actions #3

Updated by Matt Benjamin almost 4 years ago

Or indicated that he has core files :)

Matt

Actions #4

Updated by Or Friedmann almost 4 years ago

Could be reproduce by:
1) pkill osd
2) bin/ceph-osd -i 0 -c ./build/ceph.conf
3)pkill osd

Actions #5

Updated by Or Friedmann almost 4 years ago

Logs of the rgw with debug_objecter = 20

Actions #6

Updated by Adam Emerson almost 4 years ago

  • Status changed from New to Fix Under Review
Actions #7

Updated by Casey Bodley almost 4 years ago

  • Pull request ID set to 35422
Actions #8

Updated by Kefu Chai almost 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #9

Updated by Nathan Cutler almost 4 years ago

  • Status changed from Pending Backport to Resolved

https://github.com/ceph/ceph/pull/32601 (which caused this bug, right?) went in post-Octopus and is not being backported

@Kefu Chai - I'm assuming you set this to "Pending Backport" by mistake. Please correct me if I'm wrong.

Actions

Also available in: Atom PDF